web2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-ingress
spec:
  rules:
    - host: mytravel-123.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 4200
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: backend-auth-service
                port:
                  number: 5000
          - path: /api/tours
            pathType: Prefix
            backend:
              service:
                name: backend-tours-service
                port:
                  number: 5001
